--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,3 +174,7 @@
   }
 }
 
+.dark-navy {
+    color: var(--dark-navy) !important;
+}
+
